--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -42,3 +42,21 @@ button, input {
 .clearfix {
     *zoom: 1
 }
+
+.el-submenu__title {
+    font-size: 17px;
+}
+
+.el-breadcrumb {
+    margin-bottom: 15px;
+    font-size: 12px;
+}
+
+.el-card {
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15) !important;
+}
+
+.el-table {
+    margin-top: 20px;
+    font-size: 12px;
+}
